<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".airQuality.AirActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quality"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDominant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDominant"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/circle"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/stężenia"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDominant" />

    <TextView
        android:id="@+id/tvC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/c1"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGrass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvGrass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c2"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC1" />

    <TextView
        android:id="@+id/tvTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c3"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGrass" />

    <TextView
        android:id="@+id/tvWeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c4"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTree" />

    <TextView
        android:id="@+id/tvMold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c5"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvC6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeed" />

    <TextView
        android:id="@+id/tvC6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c6"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvC7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMold" />

    <TextView
        android:id="@+id/tvC7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c7"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvC8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC6" />

    <TextView
        android:id="@+id/tvC8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c8"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC7" />

    <TextView
        android:id="@+id/tvLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loc"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC8" />

</androidx.constraintlayout.widget.ConstraintLayout>