<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/textViewAllergen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ml2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_grey" />

    <TextView
        android:id="@+id/textViewSymptoms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/objawy2"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/dark_grey" />
</LinearLayout>