<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pollens.PollenActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="297dp"
        android:layout_height="106dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.718"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dominant"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDominant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvDominant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/circle"
        android:textAlignment="center"
        android:textColor="@color/dark_grey"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pylenie"
        android:textColor="@color/dark_grey"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvC1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDominant" />

    <TextView
        android:id="@+id/tvC1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/levels"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/tvGrass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/tvGrass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grass"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvTree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvC1" />

    <TextView
        android:id="@+id/tvTree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tree"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvWeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGrass" />

    <TextView
        android:id="@+id/tvWeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weed"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvMold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTree" />

    <TextView
        android:id="@+id/tvMold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mold"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWeed" />

    <TextView
        android:id="@+id/tvLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/loc"
        android:textColor="@color/dark_grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>