<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    tools:context="allergens.AllergensActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/id"
                android:textColor="@color/dark_grey" />

            <EditText

                android:id="@+id/d_id"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp"
                android:width="150px" />
        </TableRow>
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/ml"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/d_allergen"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/objawy"
                android:textColor="@color/dark_grey" />

            <EditText
                android:id="@+id/d_symptoms"
                android:width="200dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20sp"
                android:layout_marginLeft="20sp" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="272dp"
        android:layout_marginTop="20sp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="wrap_content"
            android:layout_height="285dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:onClick="saveRecord"
            android:text="@string/add"
            android:textSize="10sp" />

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:onClick="updateRecord"
            android:text="Update"
            android:textSize="10sp" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:onClick="deleteRecord"
            android:text="@string/usun"
            android:textSize="10sp" />
    </LinearLayout>
</LinearLayout>